Fixed minor issue with thumbnail spinner alignment.

--- a/src/client/components/Dashboard/ViewFiles.scss
+++ b/src/client/components/Dashboard/ViewFiles.scss
@@ -417,6 +417,15 @@
         display: flex;
         flex-direction: column;
 
+        div.ant-spin {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          margin-right: 50%;
+        }
+
+        i.anticon {}
+
         img {
           width: 100%;
           height: 100%;
